# SLmetrics

./: .Rbuildignore  .gitattributes  .gitignore  .nojekyll  404.html  CODE_OF_CONDUCT.html  CRAN-SUBMISSION  DESCRIPTION  LICENSE.html  LICENSE.md  Makefile  NAMESPACE  NEWS.Rmd  NEWS.md  NEWS.qmd  README.Rmd  README.html  README.md  README.qmd  SLmetrics.Rproj  _pkgdown.yml  authors.html  benchmark.html  build.R  classification_functions.html  codemeta.json  configure  configure.ac  cran-comments.md  functions.html  garbage.html  index.html  integration.html  integration_classification.html  integration_regression.html  intro.html  modifyRcppExports.R  openmp.html  pkgdown.yml  references.html  (+4 more)
.github/: .gitignore  FUNDING.yaml
R/: OpenMP.R  RcppExports.R  S3-CrossEntropyLoss.R  S3-Entropy.R  S3-LogLoss.R  S3_Accuracy.R  S3_AreaUnderTheCurve.R  S3_BalancedAccuracy.R  S3_CoefficientOfDetermination.R  S3_CohensKappa.R  S3_ConcordanceCorrelationCoefficient.R  S3_ConfusionMatrix.R  S3_Covariance.R  S3_Entropy.R  S3_FBetaScore.R  S3_FalseDiscoveryRate.R  S3_FalseOmissionRate.R  S3_FalsePositiveRate.R  S3_FowlkesMallowsIndex.R  S3_HuberLoss.R  S3_JaccardIndex.R  S3_LikelihoodRatios.R  S3_LogLoss.R  S3_MatthewsCorrelationCoefficient.R  S3_MeanAbsoluteError.R  S3_MeanAbsolutePercentageError.R  S3_MeanPercentageError.R  S3_MeanSquaredError.R  S3_NegativePredictiveValue.R  S3_PinballLoss.R  S3_Precision.R  S3_PrecisionRecallCurve.R  S3_Recall.R  S3_ReceiverOperatorCharacteristics.R  S3_RecieverOperatorCharacteristics.R  S3_RelativeAbsoluteError.R  S3_RelativeRootMeanSquaredError.R  S3_RelativeRootSquaredError.R  S3_RootMeanSquaredError.R  S3_RootMeanSquaredLogarithmicError.R  (+21 more)
articles/: SLmetrics.html  classification_problems.html  index.html  regression_problems.html
data/: banknote.rda  obesity.rda  wine_quality.rda
data-raw/: OpenMP_perfomance.R  banknote_authentification.R  classification_performance.R  memory_performance.R  obesity.R  performance.R  regression_performance.R  wine_quality.R
docs/: _environment  _quarto.yml  benchmark.qmd  classification_functions.qmd  functions.qmd  garbage.qmd  index.qmd  integration.qmd  integration_classification.qmd  integration_regression.qmd  intro.qmd  openmp.qmd  regression_functions.qmd  summary.qmd  theme-dark.scss
man/: ROC.Rd  SLmetrics-package.Rd  accuracy.Rd  auc.Rd  baccuracy.Rd  banknote.Rd  ccc.Rd  ckappa.Rd  cmatrix.Rd  cov.wt.Rd  dor.Rd  entropy.Rd  fbeta.Rd  fdr.Rd  fer.Rd  fmi.Rd  fpr.Rd  huberloss.Rd  jaccard.Rd  kappa.Rd  logloss.Rd  mae.Rd  mape.Rd  mcc.Rd  mpe.Rd  mse.Rd  nlr.Rd  npv.Rd  obesity.Rd  openmp.on.Rd  pinball.Rd  plr.Rd  pr.auc.Rd  prROC.Rd  precision.Rd  preorder.Rd  presort.Rd  rae.Rd  recall.Rd  rmse.Rd  (+16 more)
meta/: NEWS.qmd  NEWS.rmarkdown  README.md  README.qmd
news/: index.html
pkgdown/: index.Rmd  index.md
ref_classification/: ROC.html  accuracy.html  baccuracy.html  ckappa.html  cmatrix.html  dor.html  entropy.html  fbeta.html  fdr.html  fer.html  fmi.html  fpr.html  jaccard.html  logloss.html  mpe.html  nlr.html  npv.html  plr.html  pr.auc.html  prROC.html  precision.html  recall.html  roc.auc.html  rsq.html  setNumberThreads.html  setUseOpenMP.html  specificity.html  zerooneloss.html
ref_regression/: ccc.html  huberloss.html  mae.html  mape.html  mcc.html  mse.html  pinball.html  rae.html  rmse.html  rmsle.html  rrmse.html  rrse.html  smape.html  specificity.html
reference/: ROC.html  SLmetrics-package.html  SLmetrics.html  accuracy.html  baccuracy.html  ccc.html  ckappa.html  cmatrix.html  dor.html  entropy.html  fbeta.html  fdr.html  fer.html  fmi.html  fpr.html  huberloss.html  index.html  jaccard.html  logloss.html  mae.html  mape.html  mcc.html  mpe.html  mse.html  nlr.html  npv.html  pinball.html  plr.html  prROC.html  precision.html  rae.html  recall.html  (+42 more)
(+569 files in other folders)
